@@ -25,6 +25,7 @@ import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 @EnableWebSecurity
@@ -46,61 +47,38 @@ public class SecurityConfig {
             .csrf(csrf -> csrf.disable())
             .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
             .authorizeHttpRequests(auth -> auth
-                // ============ ENDPOINTS PÚBLICOS (SIN AUTENTICACIÓN) ============
                 
-                // Autenticación y registro
                 .requestMatchers("/api/auth/**").permitAll()
                 
-                // Ofertas públicas (listar, buscar, ver detalle)
                 .requestMatchers("/api/ofertas/public/**").permitAll()
-                
-                // Enviar postulación (requiere token internamente pero endpoint expuesto)
                 .requestMatchers("/api/postulaciones/enviar").permitAll()
                 
-                // Aprobación de postulaciones por email (con token único)
                 .requestMatchers("/api/aprobacion/**").permitAll()
                 
-                // GET de empresas y candidatos son públicos (para obtener logos, contar, etc.)
                 .requestMatchers(HttpMethod.GET, "/api/empresas/**").permitAll()
                 .requestMatchers(HttpMethod.GET, "/api/candidatos/**").permitAll()
                 
-                // ============ ENDPOINTS DE ADMINISTRACIÓN ============
-                
-                // Panel de administración (solo ADMIN)
                 .requestMatchers("/api/admin/**").hasRole("ADMIN")
                 
-                // Documentación Swagger/OpenAPI (solo ADMIN)
                 .requestMatchers("/v3/api-docs/**", "/swagger-ui/**", "/swagger-ui.html", 
                                  "/swagger-resources/**", "/webjars/**").hasRole("ADMIN")
-                
-                // ============ OPERACIONES DE ESCRITURA PARA EMPRESAS ============
                 
                 .requestMatchers(HttpMethod.POST, "/api/empresas/**").hasAnyRole("RECRUITER", "ADMIN")
                 .requestMatchers(HttpMethod.PUT, "/api/empresas/**").hasAnyRole("RECRUITER", "ADMIN")
                 .requestMatchers(HttpMethod.PATCH, "/api/empresas/**").hasAnyRole("RECRUITER", "ADMIN")
                 .requestMatchers(HttpMethod.DELETE, "/api/empresas/**").hasAnyRole("RECRUITER", "ADMIN")
-                
-                // ============ OPERACIONES DE ESCRITURA PARA CANDIDATOS ============
-                
+                                
                 .requestMatchers(HttpMethod.POST, "/api/candidatos/**").hasAnyRole("CANDIDATO", "ADMIN")
                 .requestMatchers(HttpMethod.PUT, "/api/candidatos/**").hasAnyRole("CANDIDATO", "ADMIN")
                 .requestMatchers(HttpMethod.PATCH, "/api/candidatos/**").hasAnyRole("CANDIDATO", "ADMIN")
                 .requestMatchers(HttpMethod.DELETE, "/api/candidatos/**").hasAnyRole("CANDIDATO", "ADMIN")
                 
-                // ============ ENDPOINTS DE USUARIOS (FOTO DE PERFIL) ============
-                // ✅ Permitir que ADMIN y el propio usuario puedan subir foto
                 .requestMatchers(HttpMethod.PUT, "/api/usuarios/**").authenticated()
-                
-                // ============ ENDPOINTS QUE REQUIEREN AUTENTICACIÓN ============
-                
-                // Ofertas (excepto las públicas ya definidas)
+                                
                 .requestMatchers("/api/ofertas/**").authenticated()
                 
-                // Postulaciones (excepto enviar que ya es público)
                 .requestMatchers("/api/postulaciones/**").authenticated()
-                
-                // ============ CUALQUIER OTRA PETICIÓN ============
-                
+                            
                 .anyRequest().hasRole("ADMIN")
             )
             .authenticationProvider(authenticationProvider())
@@ -112,18 +90,17 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Arrays.asList(
-            "http://localhost:3000",      // React (Create React App)
-            "http://localhost:5173",      // Vite
-            "http://localhost:8080",      // Desarrollo local
-            "http://localhost:4200",      // Angular
-            "https://jobmanagerbackend.onrender.com"  // Producción
-        ));
-        configuration.setAllowedMethods(Arrays.asList(
+        
+        configuration.setAllowedOriginPatterns(List.of("*"));
+        
+        configuration.setAllowedMethods(List.of(
             "GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"
         ));
-        configuration.setAllowedHeaders(Arrays.asList("*"));
-        configuration.setAllowCredentials(true);
+        
+        configuration.setAllowedHeaders(List.of("*"));
+        
+        configuration.setAllowCredentials(false);
+        
         configuration.setMaxAge(3600L);
         
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
